# python-coding-agent

./: LICENSE
python-ai-agent/: app.py  main.py  pyproject.toml
python-ai-agent/src/: __init__.py  agent.py  code_executor.py  file_handler.py  ollama_client.py  tools.py
python-ai-agent/test_file/: buggy_code.py
