[project]
name = "python-debug-agent"
version = "0.1.0"
description = "AI-powered Python debugging agent using Ollama (CPU optimized)"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "ollama>=0.1.0",
    "rich>=13.0.0",
    "prompt-toolkit>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.black]
line-length = 100
target-version = ['py39']